updated some more articles

--- a/_posts/2018-09-30-gk5-risiko.md
+++ b/_posts/2018-09-30-gk5-risiko.md
@@ -20,7 +20,4 @@ Wie du siehst, kann man drei Sachverhalte sehr gut aus der Grafik entnehmen:
 
 Genau der dritte Punkt ist es, in dem das Risiko mit der Zeit (Haltedauer) korreliert. Was ich damit ausdrücken will, ist, du kannst Börsencrashs aussitzen. Dies setzt natürlich ein gut diversifiziertes Portfolio voraus. Einzelaktien können vom Markt verschwinden / Konkurs anmelden. Für einen gesamten Index, wie den DAX oder besser noch den MSCI World, ist dies aber nahezu ausgeschlossen.
 Was dir natürlich immer geschehen kann, ist das du zum vermeintlich falschen Zeitpunkt in den Markt einsteigst und Wertpapiere kaufst. Dies wäre zum Beispiel der Fall gewesen, wenn du direkt vor dem Crash 2007 Anteile vom DAX gekauft hättest. Zwar müsstest du nun einige Jahre darauf warten, bis du wieder ohne Wertverlust aus der Geschichte herauskommst, aber das Warten wäre nicht unbelohnt geblieben.
-Meine Empfehlung ist solche Abstürze als Gelegenheit zu erkennen, um weitere Anteile zu erwerben, also das Sparen zu intensivieren. Statt zu denken: „oh nein meine Wertpapiere haben 50 % an Wert verloren“, solltest du versuchen es wie eine Rabattaktion zu betrachten: „oh toll, 50 % Rabatt auf die Wertpapiere, da bekomme ich ja doppelt so viel für mein Geld“. Optimalerweise solltest du hierzu bei größeren Beträgen nie alles auf einmal investieren und den Betrag auf mehrere Einzelinvestments aufteilen. Das nennt sich „Cost-Average-Effect“ und wie du ihn automatisiert dir zunutze machen  kannst, erkläre ich dir im Artikel [Nutzen des Cost-Average-Effects bei Sparplänen](broken link).
-
-# todo repair broken link
-
+Meine Empfehlung ist solche Abstürze als Gelegenheit zu erkennen, um weitere Anteile zu erwerben, also das Sparen zu intensivieren. Statt zu denken: „oh nein meine Wertpapiere haben 50 % an Wert verloren“, solltest du versuchen es wie eine Rabattaktion zu betrachten: „oh toll, 50 % Rabatt auf die Wertpapiere, da bekomme ich ja doppelt so viel für mein Geld“. Optimalerweise solltest du hierzu bei größeren Beträgen nie alles auf einmal investieren und den Betrag auf mehrere Einzelinvestments aufteilen. Das nennt sich „Cost-Average-Effect“ und wie du ihn automatisiert dir zunutze machen  kannst, erkläre ich dir im Artikel [Nutzen des Cost-Average-Effects bei Sparplänen]({{ site.baseurl }}{% post_url 2018-11-30-gk7-cost-average-effect %}).
