added seo meta data and sitemap.xml

--- a/_posts/2018-08-18-gk2-rente.md
+++ b/_posts/2018-08-18-gk2-rente.md
@@ -3,6 +3,8 @@ layout: post
 title:  "Warum Sparen? Aka wie funktioniert unsere Rente?"
 date:   2018-08-18 18:00:00 +0200
 category: ["geldkram"]
+tags: [altern, Generationenvertrag, Grundsicherung, Lebensarbeitszeit, Rente, Rentenbezugsdauer, Rentenlücke
+, Rentensystem, sparen]
 ---
 
 Warum sollte man eigentlich sparen? Nun, es gibt eine Menge guter Gründe. Die meisten lassen sich in die beiden
