--- a/_posts/2018-09-30-gk5-risiko.md
+++ b/_posts/2018-09-30-gk5-risiko.md
@@ -3,6 +3,7 @@ layout: post
 title:  "Risiko, eine Frage von Zeit und Zeitpunkt"
 date:   2018-09-30 18:00:00 +0200
 category: ["geldkram"]
+tags: [DAX, Krise, Rendite, Risiko]
 ---
 
 Das Thema Risiko ist eines, dass gerade in Deutschland sehr oft mit dem Thema Aktien und Börse im Allgemeinen verbunden wird. Und dies mit Recht!
