--- a/_posts/2018-08-11-gk1-sparen.md
+++ b/_posts/2018-08-11-gk1-sparen.md
@@ -3,6 +3,7 @@ layout: post
 title:  "Was tun mit dem Geld? Sparen!"
 date:   2018-08-11 18:00:00 +0200
 category: ["geldkram"]
+tags: [konsumieren, lebensstandard, sparen]
 ---
 
 Als ich nach meinem Informatikstudium anfing als Softwareentwickler zu arbeiten, hatte ich plötzlich auf ein wesentlich größeres Einkommen Zugriff als vorher noch als Student. Dies brachte mich in die komfortable Lage, mir darüber Gedanken machen zu können / müssen was ich mit diesem zusätzlichen Geld anstellen sollte. Ich sah hierbei grundlegend zwei Möglichkeiten:
