upgrade jekyll from 3.8.6 to 4.0.0

--- a/_posts/2018-09-30-gk5-risiko.md
+++ b/_posts/2018-09-30-gk5-risiko.md
@@ -10,7 +10,7 @@ Das Thema Risiko ist eines, dass gerade in Deutschland sehr oft mit dem Thema Ak
 Von den Medien, die über künftige und vergangene Börsencrashs berichten, über die Darstellung von Banken, die mit hochriskanten Finanzgeschäften das Geld „des kleinen Mannes“ riskieren, bis hin zu Warnungen beim Kauf vieler Finanzprodukte, das diese erheblichen Risiken bergen, gibt es eine Menge Indizien für Risiko. Vieles davon ist richtig. Aber warum gibt es, außer in Deutschland, so viele Menschen, die den Schritt an die Börse wagen und damit Geld verdienen?
 Es ist, wie es immer ist: die Welt ist weder schwarz noch weiß. Die schwarzen Tage scheinen jedoch manchmal besonders Präsent im Gedächtnis zu verbleiben. Viele werden den einen oder anderen Börsencrash nennen können. Die präsentesten Beispiele mögen hier das Platzen der [Dotcom-Blase](https://de.wikipedia.org/wiki/Dotcom-Blase) mit dem einhergehenden massiven Wertverlust von beispielsweise der Telekom-Aktie, sowie die sogenannte [Weltfinanzkrise 2007](https://de.wikipedia.org/wiki/Weltfinanzkrise) mit der Lehmann-Pleite und folgenden Griechenland-Euro-Krise sein. Das Bemerkenswerte daran, neben den tragischen Schicksalen bestimmter Einzelwerte, ist jedoch, dass wir noch immer hier sind. So sehr der DAX beispielsweise auch 2007 bis 2009 abgestürzt sein mag, weder hat dies an der Existenz selbigen gerüttelt, noch daran etwas geändert, dass der DAX wenige Jahre späte bereits wieder in höheren Bewertungen anzutreffen war als vor der Krise. Das ist auch auf folgender Grafik vom Deutschen Aktieninstitut e.V. gut zu erkennen (nimm dir für die Grafik ein wenig Zeit, ihr Inhalt erschließt sich nicht auf den ersten Blick):
 
-![Renditedreieck DAX]({{ site.baseurl }}{% link assets/geldkram/gk5-renditedreieck-dax.PNG %})
+![Renditedreieck DAX]({% link assets/geldkram/gk5-renditedreieck-dax.PNG %})
 (Quelle: [Deutsches Aktieninstitut e.V.](https://www.dai.de/files/dai_usercontent/dokumente/renditedreieck/2017-12-31%20DAX-Rendite-Dreieck%2050%20Jahre%20Sparplan%20Web.pdf) das jeweils aktuellste Renditedreieck kann hier bezogen werden.)
 
 Wie du siehst, kann man drei Sachverhalte sehr gut aus der Grafik entnehmen:
@@ -21,4 +21,4 @@ Wie du siehst, kann man drei Sachverhalte sehr gut aus der Grafik entnehmen:
 
 Genau der dritte Punkt ist es, in dem das Risiko mit der Zeit (Haltedauer) korreliert. Was ich damit ausdrücken will, ist, du kannst Börsencrashs aussitzen. Dies setzt natürlich ein gut diversifiziertes Portfolio voraus. Einzelaktien können vom Markt verschwinden / Konkurs anmelden. Für einen gesamten Index, wie den DAX oder besser noch den MSCI World, ist dies aber nahezu ausgeschlossen.
 Was dir natürlich immer geschehen kann, ist das du zum vermeintlich falschen Zeitpunkt in den Markt einsteigst und Wertpapiere kaufst. Dies wäre zum Beispiel der Fall gewesen, wenn du direkt vor dem Crash 2007 Anteile vom DAX gekauft hättest. Zwar müsstest du nun einige Jahre darauf warten, bis du wieder ohne Wertverlust aus der Geschichte herauskommst, aber das Warten wäre nicht unbelohnt geblieben.
-Meine Empfehlung ist solche Abstürze als Gelegenheit zu erkennen, um weitere Anteile zu erwerben, also das Sparen zu intensivieren. Statt zu denken: „oh nein meine Wertpapiere haben 50 % an Wert verloren“, solltest du versuchen es wie eine Rabattaktion zu betrachten: „oh toll, 50 % Rabatt auf die Wertpapiere, da bekomme ich ja doppelt so viel für mein Geld“. Optimalerweise solltest du hierzu bei größeren Beträgen nie alles auf einmal investieren und den Betrag auf mehrere Einzelinvestments aufteilen. Das nennt sich „Cost-Average-Effect“ und wie du ihn automatisiert dir zunutze machen  kannst, erkläre ich dir im Artikel [Nutzen des Cost-Average-Effects bei Sparplänen]({{ site.baseurl }}{% post_url 2018-11-30-gk7-cost-average-effect %}).
+Meine Empfehlung ist solche Abstürze als Gelegenheit zu erkennen, um weitere Anteile zu erwerben, also das Sparen zu intensivieren. Statt zu denken: „oh nein meine Wertpapiere haben 50 % an Wert verloren“, solltest du versuchen es wie eine Rabattaktion zu betrachten: „oh toll, 50 % Rabatt auf die Wertpapiere, da bekomme ich ja doppelt so viel für mein Geld“. Optimalerweise solltest du hierzu bei größeren Beträgen nie alles auf einmal investieren und den Betrag auf mehrere Einzelinvestments aufteilen. Das nennt sich „Cost-Average-Effect“ und wie du ihn automatisiert dir zunutze machen  kannst, erkläre ich dir im Artikel [Nutzen des Cost-Average-Effects bei Sparplänen]({% post_url 2018-11-30-gk7-cost-average-effect %}).
